--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,199 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  /* overflow-x: hidden; */
+}
+
+.kanban-board {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  width: 100%;
+  gap: 5px;
+  background-color: #F4F5F8;
+  height: 100vh;
+}
+
+.topbar {
+  padding: 20px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.group-column {
+  background-color: #f4f4f4;
+  padding: 10px;
+  grid-column: span 1 / span 1;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title-container{
+  display: flex;
+  width: 100%;
+  margin: 20px 0px;
+  justify-content: space-between;
+}
+
+.group-title{
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  gap: 5px;
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
+.title-menu-icons{
+  display: flex;
+  gap: 3px;
+}
+
+.count {
+  color: #5c5c5c;
+  font-weight: 400;
+  margin-left: 10px;
+}
+
+.ticket-card {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  padding: 15px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.ticket-info {
+  display: flex;
+  font-size: 13px;
+  justify-content:space-between;
+}
+
+.ticket-details {
+  height: 80px;
+  display: flex;
+  gap: 5px;
+}
+.ticket-details img{
+  transform: translateY(3px);
+}
+
+.ticket-details .ticket-title {
+  font-size: 15px;
+}
+
+.ticket-tags{
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.ticket-tags img{
+  border: 1px solid #ccc;
+  padding: 2px;
+  border-radius: 3px;
+}
+
+.ticket-tags .feature {
+  display: flex;
+  gap: 2px;
+  padding: 2px 4px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  align-items: center;
+  font-size: 12px;
+  color: #bec2c8;
+}
+.ticket-tags .feature .feature-icon{
+  font-size: 5px;
+  color: #bec2c8;
+}
+
+
+
+
+
+.filter-section {
+  position: relative;
+}
+
+.display-button {
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #ccc;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 1px 4px;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-around;
+  color: #282A2F;
+  gap: 8px;
+  border-radius: 5px;
+  align-items: center;
+}
+
+.dropdown-menu {
+  position: absolute;
+  width: max-content;
+  background-color: #F9FAFB;
+  border: 1px solid #dbdbdb;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 5px;
+  padding: 16px;
+  margin-top: 8px;
+  z-index: 1000;
+}
+
+.dropdown-item {
+  display: flex;
+  align-items: center;
+  color: #8B8B8C;
+  gap: 70px;
+}
+
+.dropdown-item:first-child{
+  margin-bottom: 15px;
+}
+
+.dropdown-item label {
+  margin-bottom: 4px;
+  font-weight: bold;
+}
+
+select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  width: 120px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+
+
+
+
+.user-avatar-header {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.user-avatar-card {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.status-icon {
+  width: 15px;
+  height: 15px;
 }
